    work for Ubiquity as-is, because it can't yet handle multi-page steps
    such as Ubiquity's partitioner.)
  * Reword templates, package descriptions, and the oem-config(8) manual
    page to make it clearer that the first stage of oem-config is for use by
    OEMs, not end users (LP: #48144). Clarify the term "OEM" in a comment
    for translators.
  * Add LSB init script header.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 16 Jan 2009 15:50:45 +0000

oem-config (1.54.2) jaunty; urgency=low

  * Add a debconf_ui frontend which can be used in text mode on a server.
    This is still experimental; in particular, setting the language does not
    yet take effect until after oem-config exits.
  * Adjust for changes in tzsetup 1:0.24ubuntu1.
  * Add experimental --cdebconf option.
  * Use spaces rather than ${!TAB} in localechooser, since debconf doesn't
    support the latter yet.
  * Add manual pages for all programs (LP: #274048).
  * Automatic update of included source packages: console-setup 1.28ubuntu4,
    tzsetup 1:0.24ubuntu1, user-setup 1.23ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 22 Dec 2008 15:42:48 +0000

oem-config (1.54.1) jaunty; urgency=low

  [ Evan Dandrea ]
  * GTK frontend:
    - Use an iconview as the language selection widget.  Only show
      scrollbars for the language selection widget if the window is going to
      be larger than the desktop.

  [ Colin Watson ]
  * Fix debian/oem-config.install for new location of tzmap in build tree.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Nov 2008 10:03:45 +0000

oem-config (1.54.0) jaunty; urgency=low

  * Use OVERRIDE_SHOW_ALL_LANGUAGES in the tzsetup wrapper as well as
    localechooser (LP: #290580).
  * Switch to a new versioning scheme and omit the sub-minor version from
    AC_INIT so that we don't have to regenerate configure with every single
    upload.
  * Create a BaseFrontend class and move various things to it; it now counts